# basketball-stats-tracker

./: .dockerignore  .editorconfig  .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  build_standalone.sh  build_with_version.sh  bundle_app.py  docker-compose.yml  docker_compose.yml  game_stats_template.csv  players_template.csv  pyproject.toml  seed.py
.github/: copilot-instructions.md
.github/workflows/: README.md  ci.yml  codeql.yml  deploy.yml  pr-validation.yml  season-migration.yml  test-report.yml
app/: VERSION.json  __init__.py  cli.py  config.py  dependencies.py  main.py  mcp_server.py
app/auth/: __init__.py  dependencies.py  jwt_handler.py  models.py  oauth.py  service.py
app/config_data/: __init__.py  awards.py
app/data_access/: __init__.py  database_manager.py  db_session.py  models.py  models_awards.py  transaction.py
app/data_access/crud/: __init__.py  crud_audit_log.py  crud_game.py  crud_player.py  crud_player_award.py  crud_player_game_stats.py  crud_player_quarter_stats.py  crud_player_season_stats.py  crud_scheduled_game.py  crud_season.py  crud_team.py  crud_team_season_stats.py
app/reports/: __init__.py  report_generator.py
app/repositories/: __init__.py  base.py  game_repository.py  player_repository.py  team_repository.py
app/schemas/: csv_schemas.py
app/services/: __init__.py  audit_log_service.py  awards_service.py  awards_service_v2.py  csv_import_service.py  data_correction_service.py  database_admin_service.py  email_service.py  game_service.py  game_state_service.py  github_issue_service.py  image_processing_service.py  matchup_service.py  player_service.py  player_stats_service.py  playoffs_service.py  report_service.py  schedule_service.py  score_calculation_service.py  season_awards_service.py  season_service.py  season_stats_service.py  shot_notation_service.py  stats_entry_service.py  team_stats_service.py
app/services/cli_commands/: __init__.py  auth_commands.py  database_commands.py  import_commands.py  listing_commands.py  report_commands.py  report_utils.py  season_commands.py  server_commands.py  stats_commands.py
app/services/commands/: __init__.py  base.py  game_commands.py  player_commands.py  team_commands.py
app/services/import_services/: __init__.py  csv_parser.py  data_validator.py  import_orchestrator.py  import_processor.py
app/utils/: fuzzy_matching.py  input_parser.py  scorebook_parser.py  stats_aggregator.py  stats_calculator.py
app/web_ui/: __init__.py  api.py  cache.py  dependencies.py  routes.py  schemas.py  templates_config.py
app/web_ui/routers/: __init__.py  admin.py  auth.py  awards.py  awards_config.py  games.py  matchup.py  pages.py  players.py  playoffs.py  reports.py  teams.py
bundle_data/: README.txt  start.bat  start.sh
docs/: app_evaluation_report.md  deployment_troubleshooting.md  design_doc.md  development.md  development_phases.md  pyinstaller_bundle.md  stats_calculation_guide.md
docs/plan/: codex_issues.md
docs/plans/: codex_optimization_tasks.md
hooks/: pyinstaller_hook.py
migrations/: env.py
migrations/versions/: 13bb0669f405_add_live_game_entry_tables_and_fields.py  18b9a59ab7f2_add_display_name_field_to_team_model.py  20a8f90c4c75_add_is_playoff_game_to_scheduled_games.py  302e946efab0_add_game_id_field_to_playeraward_for_.py  3d65696eeb09_merge_heads.py  4277cc4a9e9c_add_oauth_support_and_team_association_.py  48b56284cfab_add_score_fields_to_game_model.py  4bb1f2a2a3fa_add_playoff_seed_to_teams.py  4d2154170d95_fix_jersey_number_and_player_constraints.py  69cd99a5e5f6_add_seasons_table_and_season_id_to_games.py  6c1432a982da_add_season_statistics_tables.py  7e567a4a5d6e_add_player_of_the_week_awards_count_to_.py  834c9663d23c_update_database_schema.py  876bafcd6862_refactor_player_awards_for_.py  87de4895a505_merge_admin_user_and_oauth_migrations.py  a6e40a9168f7_merge_authentication_and_thumbnail_.py  ac78b1e94d31_convert_game_date_to_date_type.py  add_scheduled_games_table.py  add_team_logo_filename.py  add_thumbnail_image_to_player.py  add_user_authentication_tables.py  b1e1ff107303_add_substitute_player_support.py  c2ca55dc5329_add_playoff_configuration_model.py  ca9896e6a7f3_add_unique_constraint_for_games_based_.py  create_default_admin_user.py  e0473a26cb0b_add_playeraward_table_for_detailed_.py  e31c9e352add_add_overtime_support.py  f378ca14303a_add_is_playoff_game_to_games.py  fd0f8271073e_add_audit_log_and_soft_delete_.py
scripts/: apply_hotfix.py  capture_version.py  convert_line_endings.py  convert_line_endings.sh  fix_missing_columns.sql  get_version.py  migrate_seasons_production.py  run_season_migration.sh  update_stats.py
tests/: __init__.py  conftest.py  test_targets.mk
tests/functional/: README.md  __init__.py  test_awards_ui.py  test_overtime_ui_display.py  test_player_portrait_ui.py  test_team_logo_ui.py
tests/integration/: __init__.py  conftest.py  test_admin_calculate_awards.py  test_api_endpoints.py  test_auth_flow.py  test_awards_calculation_e2e.py  test_awards_integration.py  test_awards_integration.py.disabled  test_awards_integration_simple.py  test_container_startup.py  test_cookie_authentication.py  test_create_game_ui.py  test_csv_import.py  test_game_detail_page.py  test_game_edit_workflow.py  test_game_entry_workflow.py  test_games_scorebook_api.py  test_import_game_cli.py  test_import_game_command.py  test_matchup_router.py  test_oauth_integration.py  test_overtime_functionality.py  test_overtime_ui_display.py  test_player_portrait_upload_workflow.py  test_scheduled_game_edit_simple.py  test_scheduled_games_api.py  test_scorebook_api_workflows.py  test_scorebook_import_flow.py  test_season_management_regression.py  test_season_statistics.py  test_security_integration.py  test_team_detail_page.py  test_team_logo_container_environment.py  test_team_logo_display.py  test_team_logo_upload_workflow.py  test_team_standings_integration.py  test_teams_page_tabs.py  test_ui_validation.py
tests/ui/: test_playoffs_page.py
tests/unit/: __init__.py
(+139 files in other folders)
